--- a/.env-example
+++ b/.env-example
@@ -1,19 +1,13 @@
 # url website
 BASE_URL_WEBSITE=http://localhost:8080
 
-DATABASE_URL=jdbc:postgresql://localhost:5432/Qunisever
-DATABASE_USERNAME=thang
-DATABASE_PASSWORD=lebinh000
+DATABASE_URL=jdbc:postgresql://localhost:5432/volunteer_db
+DATABASE_USERNAME=volunteer
+DATABASE_PASSWORD=volunteer
 
 # oauth2 config
 GOOGLE_CLIENT_ID=937096248326-ufp0dhmi6695c2selghgk86gjmk351rd.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-
-FACEBOOK_CLIENT_ID=763395406262387
-FACEBOOK_CLIENT_SECRET=ca0832375906aa8317c490f98c1c9c95
-
-GITHUB_CLIENT_ID=Ov23lifJ4piYpQoNlaJc
-GITHUB_CLIENT_SECRET=870585194a68c6bb08e7a6241bd9f0b3c85a1612
 
 OAUTH2_REDIRECT_URI=http://localhost:3000/oauth2/callback
 
@@ -27,8 +21,8 @@ CLOUDINARY_API_KEY=541881273441727
 CLOUDINARY_API_SECRET=z3McZzK0WnwxVfkd6HbwKN1sjFk
 
 # jwt (seconds)
-EXP_TOKEN=86400
-EXP_REFRESH_TOKEN=604800
+EXP_TOKEN=604800
+EXP_REFRESH_TOKEN=2592000
 
 # Admin Account
 ADMIN_USERNAME=admin
