--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
@@ -111,6 +116,11 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -138,6 +148,81 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                         </exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <!-- JaCoCo Maven Plugin for Code Coverage -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.12</version>
+                <executions>
+                    <!-- Prepare JaCoCo agent before running tests -->
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <!-- Generate coverage report after tests -->
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                    <!-- Check coverage thresholds -->
+                    <execution>
+                        <id>jacoco-check</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>BUNDLE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.70</minimum>
+                                        </limit>
+                                        <limit>
+                                            <counter>BRANCH</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.70</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+                <configuration>
+                    <!-- Exclude classes that don't need testing -->
+                    <excludes>
+                        <!-- DTOs and Request/Response objects -->
+                        <exclude>**/dto/**/*Dto.class</exclude>
+                        <exclude>**/dto/**/*Request*.class</exclude>
+                        <exclude>**/dto/**/*Response*.class</exclude>
+                        <!-- Entities -->
+                        <exclude>**/entity/**/*.class</exclude>
+                        <!-- Enums -->
+                        <exclude>**/enums/**/*.class</exclude>
+                        <!-- Configuration classes -->
+                        <exclude>**/config/**/*.class</exclude>
+                        <!-- Exception classes -->
+                        <exclude>**/exception/**/*Exception.class</exclude>
+                        <exclude>**/exception/ErrorCode.class</exclude>
+                        <!-- Main application class -->
+                        <exclude>**/VolunteerApplication.class</exclude>
+                        <!-- Data initializers -->
+                        <exclude>**/init/**/*.class</exclude>
+                        <!-- Utility validators (annotation-based) -->
+                        <exclude>**/util/*Validator.class</exclude>
+                        <exclude>**/util/*Validation.class</exclude>
                     </excludes>
                 </configuration>
             </plugin>
