--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -10,10 +10,10 @@ spring:
     name: volunteer
 
   datasource:
-    # Render provides PostgreSQL URL format: postgresql://user:pass@host/db
-    # Spring Boot needs JDBC format: jdbc:postgresql://host/db
-    # Solution: Update SPRING_DATASOURCE_URL in Render to have 'jdbc:' prefix
-    url: ${SPRING_DATASOURCE_URL}
+    # Render database connection using individual env vars
+    url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:volunteer_db}
+    username: ${POSTGRES_USER:volunteer}
+    password: ${POSTGRES_PASSWORD:volunteer}
     driver-class-name: org.postgresql.Driver
 
   jpa:
