--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: write
+  pull-requests: write # Nếu cần comment vào PR
+
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -19,6 +24,9 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
           cache: 'maven'
+
+      - name: Make mvnw executable
+        run: chmod +x mvnw
 
       # Chạy test và tạo JaCoCo coverage report
       - name: Run tests
