--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,6 +58,6 @@ jobs:
           files: ./target/site/jacoco/jacoco.xml
           fail_ci_if_error: false
 
-      # Cập nhật dependency graph cho GitHub Security
-      - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      # Cập nhật dependency graph cho GitHub Security (yêu cầu bật Dependency Graph trong Settings)
+      # - name: Update dependency graph
+      #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
